--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,59 @@ body {
   height: 2rem;
   padding: 5px;
 }
+.range-container {
+  margin-left: 7rem;
+}
+.range {
+  display: flex;
+  justify-content: flex-start;
+  border: 1px solid #777;
+  padding: 10px 5px;
+  width: 50%;
+}
+
+.range-heading i {
+  background-image: linear-gradient(to right, #db6400, #ffa62b);
+  color: transparent;
+  -webkit-background-clip: text;
+  font-size: 1.2rem;
+}
+.range-heading i:hover {
+  cursor: pointer;
+}
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.6rem;
+}
+.form-label {
+  margin-bottom: 0.2rem;
+}
+.form-input {
+  padding: 2px;
+  width: 15rem;
+}
+.range-time {
+  margin-top: 1rem;
+}
+.form-time {
+  width: 4rem;
+  height: 1.2rem;
+}
+
+.range-time input:not(:first-child) {
+  margin-left: 0.4rem;
+}
+.range button {
+  align-self: flex-end;
+  justify-self: flex-end;
+  margin-left: 0.5rem;
+}
+.btn {
+  border: none;
+  padding: 3px 7px;
+  color: white;
+  border-radius: 2px;
+  font-weight: 500;
+  background: linear-gradient(to right, #db6400, #ffa62b);
+}
